<resources>
    <string name="app_name">Tsecurity</string>

    <string name="started_title">¡TECSECURITY!</string>
    <string name="started_sub_title">
        ¡Bienvenido a Tecsecurity, la aplicación que protege tu persona!
        <br><b>Inicia sesión</b> si ya tienes una cuenta. </br>
        <br><b>Registrate</b> si es que no posees una cuenta.</br>
    </string>
    <string name="illustration_img">Illustration Image</string>
    <string name="btn_register">REGISTRARSE</string>
    <string name="btn_login">INICIAR SESIÓN</string>
    <string name="btn_login_google">INICIAR SESIÓN CON GOOGLE</string>
    <string name="login_title">INICIAR SESIÓN</string>
    <string name="Intro">Siempre con Tec-Security!</string>
    <string name="login_sub_title">
        <font color="#00C9B8"><b>Inicia Sesión</b></font>
        si ya posees una cuenta.
    </string>
    <string name="login_hint_email_user">Tu email o nombre de usuario</string>
    <string name="login_password">Tu contraseña</string>
    <string name="login_forgot_pw">¿Olvidaste tu contraseña?</string>
    <string name="login_havent_account">
        No tengo una cuenta, deseo
        <font color="#00C9B8"><b>Registrarme</b></font>
    </string>
    <string name="register_title">Crear una cuenta</string>
    <string name="register_sub_title">
        <font color="#00C9B8"><b>Ingresa</b></font>
        tus datos en los siguientes campos
    </string>
    <string name="register_fullname">Nombres y apellidos</string>
    <string name="register_email">Tu correo electrónico</string>
    <string name="register_username">Tu número de celular</string>
    <string name="register_confirm_password">Confirmar contraseña</string>
    <string name="register_have_account">
        ¿Ya tienes una cuenta creada?,
        <font color="#00C9B8"><b>Inicia Sesión</b></font>
    </string>
    <string name="home_title">Hello World!</string>
    <string name="home_sub_title">Welcome to home</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="reset_pw_title">RESTAURA TU CONTRASEÑA</string>
    <string name="reset_pw_sub_title">
        <font color="#00C9B8">Restaura tu contraseña</font>
        si la olvidaste.
    </string>

    <string name="btn_reset_pw">RESTAURAR CONTRASEÑA</string>

    <string name="back_to_login">
        Volver a
        <font color="#00C9B8"><b>Inicio de sesión</b></font>
    </string>

    <string name="login_subtitle"><![CDATA[Empoyering tech amazing individuals to shine trough hackathons, talks & challenges]]></string>

    <string name="verification_check_mail">Para acceder a la aplicación verifica tu correo electrónico (recuerda mirar en SPAM).</string>

    <!-- IDENTIFICADORES DE CLIENTE Y APP FACEBOOK-->
    <string name="facebook_app_id">1055098399022766</string>
    <string name="fb_login_protocol_scheme">fb1055098399022766</string>

    <string name="foto_de_perfil">Foto de perfil</string>
    <string name="ponga_su_mejor_foto">Ponga su mejor foto</string>
    <string name="su_foto_le_ayuda_para_qu_sus_contactos_pueda_identificarle_m_s_r_pido">Su foto le ayuda para qué sus contactos pueda identificarle más rápido</string>
    <string name="seleccionar_tipo">Seleccionar el tipo de incidente</string>
    <string name="seleccionarNivelPeligro">Seleccionar el nivel de peligro</string>

</resources>